add redis to store history message

--- a/back_end/src/main/resources/application - 副本.properties
+++ b/back_end/src/main/resources/application - 副本.properties
@@ -7,3 +7,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 server.port=your port
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=your_redis_password
