improve front_end

--- a/front_end/package.json
+++ b/front_end/package.json
@@ -17,8 +17,9 @@
     "markdown-it": "^14.1.0",
     "markdown-it-katex": "^2.0.3",
     "mockjs": "^1.1.0",
-    "vue": "^3.2.13",
-    "vue-router": "^4.4.0"
+    "vue": "^3.4.35",
+    "vue-router": "^4.4.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
