--- a/front_end/package.json
+++ b/front_end/package.json
@@ -18,6 +18,7 @@
     "markdown-it-katex": "^2.0.3",
     "mockjs": "^1.1.0",
     "vue": "^3.4.35",
+    "vue-i18n": "^9.13.1",
     "vue-router": "^4.4.0",
     "vuex": "^4.1.0"
   },
